fix: menu not showing when scrolled down

--- a/src/app/topbar/menu/menu.css
+++ b/src/app/topbar/menu/menu.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 50px;
   right: 10px;
   z-index: 10004;
